feat(be): service to check active users at x timestamp
