# harsh-vardhan-singh-24BCI0147/apps/api/swagger-output.json
@@ -104,6 +104,31 @@
           }
         }
       }
+    },
+    "/api/active-users/at": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "x",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
